# pyfolio_cpp

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakeLists_enhanced.txt  DEPLOYMENT.md  Dockerfile  Doxyfile  GPU_ACCELERATION_IMPLEMENTATION.md  Jenkinsfile  LICENSE  OPTIMIZATION_COMPLETION_REPORT.md  README.md  TEST_COVERAGE_STATUS.md  analyze_test_status.sh  coverage.info  docker-compose.yml  filtered_coverage.info  main.cpp  run_all_python_equivalence_tests.sh  run_coverage_analysis.sh  run_coverage_simple.sh  simple_test  simple_test.cpp  validate_python_equivalence.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  maintenance.yml  release.yml
build_coverage/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  coverage.info
build_coverage/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  pyfolio_tests[1]_include.cmake  pyfolio_tests[1]_tests.cmake  test_attribution_only  test_bayesian_only  test_cached_performance_only  test_capacity_only  test_core  test_data_loader_only  test_datetime_only  test_exact_python_equivalence_only  test_integration_only  test_performance_only  test_positions_only  test_pyfolio_equivalent_only  test_python_pos_equivalence_only  test_python_txn_equivalence_only  test_regime_only  test_risk_only  test_rolling_metrics_only  test_round_trips_only  test_statistics_only  test_tear_sheets_only  test_time_series_only  test_transactions_only  test_visualization_only
docker/: entrypoint.sh  healthcheck.sh
docs/: API_REFERENCE.md  CI_CD_DOCUMENTATION.md  DOCUMENTATION_REPORT.md  GETTING_STARTED.md  IMPROVEMENT_TODO_LIST.md  STATIC_ANALYSIS_REPORT.md  TEST_IMPROVEMENT_PLAN.md  mainpage.md
examples/: CMakeLists.txt  advanced_backtesting_example.cpp  advanced_risk_example.cpp  attribution_example.cpp  basic_example.cpp  bayesian_analysis_example.cpp  capacity_analysis_example.cpp  crypto_defi_example.cpp  distributed_portfolio_analysis.cpp  gpu_acceleration_example.cpp  ml_persistence_example.cpp  ml_regime_detection_example.cpp  options_pricing_example.cpp  plotly_enhanced_example.cpp  rest_api_example.cpp  risk_analysis_example.cpp  simple_backtesting_example.cpp  simple_rest_api_example.cpp  streaming_analysis_example.cpp  streaming_demo_quick.cpp  transaction_analysis_example.cpp
include/pyfolio/: pos.h  pyfolio.h  utils.h
include/pyfolio/analytics/: bayesian.h  cached_performance_metrics.h  market_indicators.h  parallel_performance_suite.h  performance_analysis_suite.h  performance_metrics.h  regime_detection.h  statistics.h  turnover_enhanced.h
include/pyfolio/attribution/: attribution.h
include/pyfolio/backtesting/: advanced_backtester.h  strategies.h
include/pyfolio/capacity/: capacity.h
include/pyfolio/core/: dataframe.h  datetime.h  error_handling.h  time_series.h  types.h
include/pyfolio/crypto/: defi_analytics.h
include/pyfolio/derivatives/: options_pricing.h
include/pyfolio/distributed/: mpi_portfolio_analyzer.h
include/pyfolio/gpu/: gpu_accelerator.h
include/pyfolio/io/: data_loader.h
include/pyfolio/math/: simd_math.h  statistics.h
include/pyfolio/memory/: pool_allocator.h
include/pyfolio/ml/: model_persistence.h  serializable_models.h
include/pyfolio/parallel/: parallel_algorithms.h
include/pyfolio/performance/: drawdown.h  ratios.h  returns.h  rolling_metrics.h
include/pyfolio/positions/: allocation.h  holdings.h  positions.h
include/pyfolio/reporting/: interesting_periods.h  tears.h
include/pyfolio/risk/: advanced_risk_models.h  factor_exposure.h  var.h
include/pyfolio/streaming/: real_time_analyzer.h
include/pyfolio/transactions/: round_trips.h  trading_costs.h  transaction.h
include/pyfolio/utils/: intraday.h  validation.h
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  monitoring.yaml  namespace.yaml  pvc.yaml  rbac.yaml  secrets.yaml  service.yaml
k8s/patches/: deployment-resources.yaml  increase-replicas.yaml  production-config.yaml
python/: CMakeLists.txt  README.md  __init__.py  pyfolio_bindings.cpp  pyfolio_bindings_minimal.cpp  pyfolio_bindings_simple.cpp  pyproject.toml  requirements.txt  setup.py  setup_simple.py
python/examples/: basic_usage.py  build_and_test.py  pandas_integration.py
python/tests/: test_bindings.py
scripts/: deploy.sh  performance_test.sh  run_static_analysis.sh
src/backtesting/: advanced_backtester.cpp
src/distributed/: mpi_portfolio_analyzer.cpp
src/math/: simd_math.cpp
src/ml/: model_persistence.cpp  serializable_models.cpp
src/risk/: advanced_risk_models.cpp
src/utils/: intraday.cpp
src/visualization/: plotly_enhanced.cpp
tests/: CMakeLists.txt  benchmark_performance.cpp  run_python_equivalent_tests.cpp  test_advanced_backtesting.cpp  test_advanced_risk_models.cpp  test_attribution.cpp  test_bayesian_analysis.cpp  test_cached_performance_metrics.cpp  test_capacity_analysis.cpp  test_comprehensive_benchmarks.cpp  test_core_types.cpp  test_data_loader.cpp  test_datetime.cpp  test_distributed_computing.cpp  test_exact_python_equivalence.cpp  test_gpu_acceleration.cpp  test_integration.cpp  test_memory_pool.cpp  test_memory_usage.cpp  test_ml_persistence.cpp  test_ml_regime_detection.cpp  test_options_pricing.cpp  test_parallel_algorithms.cpp  test_parallel_performance_suite.cpp  test_performance_analysis_suite.cpp  test_performance_metrics.cpp  test_plot.cpp  test_plotly_enhanced.cpp  test_pos.cpp  test_positions.cpp  test_pyfolio_equivalent.cpp  test_python_pos_equivalence.cpp  test_python_txn_equivalence.cpp  test_regime_detection.cpp  test_risk_analysis.cpp  test_rolling_metrics.cpp  test_round_trips.cpp  test_simd_performance.cpp  test_simple_memory_pool.cpp  test_simple_rest_api.cpp  (+6 more)
tests/datas/: positions.csv  transactions.csv  基准收益率和日收益率序列.csv
tests/templates/: flask_index.html
tests/test_data/: pyfolio_equivalent_data.cpp  pyfolio_equivalent_data.h  sample_returns.csv
(+5 files in other folders)
