[build-system]
requires = [
    "setuptools>=64",
    "wheel",
    "pybind11>=2.10.0",
    "numpy>=1.20.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pyfolio-cpp"
version = "1.0.0"
description = "High-performance portfolio analytics library"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "PyFolio Development Team", email = "dev@pyfolio.ai"},
]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["finance", "portfolio", "analytics", "quantitative", "backtesting", "risk", "performance"]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "matplotlib>=3.3.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]
viz = [
    "plotly>=5.0.0",
    "dash>=2.0.0",
    "jupyter",
]
ml = [
    "scikit-learn>=1.0.0",
    "tensorflow>=2.6.0",
    "torch>=1.9.0",
]
all = [
    "plotly>=5.0.0",
    "dash>=2.0.0",
    "jupyter",
    "scikit-learn>=1.0.0",
    "tensorflow>=2.6.0",
    "torch>=1.9.0",
]

[project.urls]
Homepage = "https://github.com/pyfolio/pyfolio-cpp"
Documentation = "https://pyfolio-cpp.readthedocs.io/"
Repository = "https://github.com/pyfolio/pyfolio-cpp"
Issues = "https://github.com/pyfolio/pyfolio-cpp/issues"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["pyfolio_cpp*"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]